<resources>
    <string name="app_name">Union</string>
    <string name="bienvenido_a_union">Bienvenido a Union</string>
    <string name="inicie_sesi_n_para_continuar">Inicie sesión para continuar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_cuenta_registrate_ya">¿No tienes cuenta? Registrate ya</string>
    <string name="registro">Registro</string>
    <string name="a_adir_imagen">Añadir imagen</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAPs51gVxIQ8lOlF9F_xGe02nR7ab_eeX0</string>

</resources>